--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,2 +1,9 @@
-
+#app {
+    height: 100vh;
+    margin: 0;
+    background-color: rgba(0, 204, 111, 0.21);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
