--- a/src/components/ToDo/ToDo.module.css
+++ b/src/components/ToDo/ToDo.module.css
@@ -1,3 +1,7 @@
 .todo {
-
+    height: 60vh;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 10px rgba(0,0,0,0.2);
 }
