--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,6 +1,12 @@
 .paper {
-    height: 70vh;
+    width: 100%;
+    height: 100%;
+        @media screen and (orientation: landscape) {
+            width: 30%;
+            height: 80vh;
+        }
     min-height: 500px;
+    min-width: 500px;
     display: flex;
     flex-direction: column;
 }
