--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /*background-color: #e8eaf6;*/
     background-color: #e8eaf6;
 }
 
